@@ -175,6 +175,8 @@ Core and Builtins
 Library
 -------
 
+- Issue 10527: make multiprocessing use poll() instead of select() if available.
+
 - Issue #16485: Fix file descriptor not being closed if file header patching
   fails on closing of aifc file.
 
